[package]
name = "tui_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
futures = "0.3"
tokio-rustls = "0.26"
webpki-roots = "0.26"
pest = "2.7"
pest_derive = "2.7"
